# ship

./: .gitignore  AGENTS.md  DEVELOPMENT.md  DOCUMENTATION.md  README.md  lefthook.yml  pyproject.toml
.ai/: show-scope-refactor-plan.md  stats-command-plan.md
.claude/: CLAUDE.md  settings.json
.github/scripts/: create-app-token.sh  generate_release_metadata.py
.github/workflows/: changelog-validate.yml  ci.yml  pi-package.yaml  publish-pi-package.yaml  publish.yaml  release.yaml  reusable-release-advanced.yaml  reusable-release.yaml  sync-news.yaml  sync-skills.yaml  trigger-release.yaml
.pi/: settings.json
changelog/: config.yaml
changelog/entries/: fix-logging-when-outside-project-root.md  improve-entry-table-layout.md  simplify-changelog-configuration.md  store-entry-creation-dates-as-date-objects.md
changelog/unreleased/: 0010-adapt-cli-table-to-terminal-width.md  0011-configure-export-style-defaults.md  0012-improve-show-help-formatting.md  0014-right-align-entry-numbers.md  0015-show-individual-changelog-entries.md  0016-add-breaking-changes-entry-type.md  0017-show-compact-markdown-bylines.md  0018-show-type-emoji-in-exported-headings.md  0019-assign-numeric-prefixes-to-changelog-entries.md  01-enforce-release-version-verification.md  01-multi-project-support.md  01-use-folded-yaml-block-for-release-descriptions.md  02-adopt-package-aware-project-discovery.md  02-configure-export-style-defaults.md  02-infer-github-context-for-entries.md  02-polish-release-creation-output.md  02-support-singular-pr-and-author-keys-in-yaml-frontmatter.md  03-improve-get-help-formatting.md  03-invert-show-table-order.md  03-keep-the-python-api-non-interactive.md  04-add-components-to-changelog-entries.md  04-merge-get-and-export-commands.md  04-use-components-in-dogfooded-project.md  06-get-individual-changelog-entries.md  08-get-compact-markdown-bylines.md  14-center-version-column.md  15-rename-show-command-to-get.md  18-allow-entry-exports.md  add-breaking-changes-entry-type.md  add-co-author-option-to-add-command.md  add-modules-for-nested-changelog-projects.md  add-release-planning-payloads-and-auto-generated-workflow-intros.md  agent-skill-respects-pr-and-author-omission-options.md  aggregated-module-changelog-summaries-in-release-notes.md  allow-intro-only-releases.md  automatic-version-file-updates-during-release-creation.md  automatically-detect-changelog-subdirectory-as-root.md  bootstrap-changelog-projects-in-changelog-subdirectory.md  center-type-column-emoji-labels.md  chronological-sorting-for-module-based-changelogs.md  (+40 more)
example-changelog/: config.yaml
example-changelog/entries/: add-pipeline-builder.md  fix-ingest-crash.md  improve-cli-help.md
schemas/: changelog-entry.schema.json  config.schema.json  release-manifest.schema.json
skill/: SKILL.md
skill/references/: create-module-release.md  (+3 more)
tests/: test_api.py  test_cli.py  test_config.py  test_entries.py  test_modules.py  test_utils.py  test_workflows.py
(+185 files in other folders)
